# cellular_automaton

./: README.md  app.py  pyproject.toml
